<resources>
    <string name="app_name">Bottom Navigation</string>
    <string name="city">City</string>
    <string name="smile">Smile</string>
    <string name="account">Account</string>
    <string name="ivan_ivanov">Ivan Ivanov</string>
    <string name="mobil_developer">Mobil Developer</string>
    <string name="mob_0702565656">mob: 0702565656</string>
    <string name="telegram_gstyagsj">telegram: @gstyagsj</string>
    <string name="experience">Experience</string>
    <string name="google">Google (2 years)</string>
    <string name="facebook">Facebook (8 months)</string>
    <string name="instagram">Instagram (3 years)</string>
    <string name="education">Education</string>
    <string name="skills">Skills</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry.r took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="washington">Washington officially the State of Washington, is a state in the Pacific Northwest region of the United States.. Named for George Washington, the first U.S. president, the state was made out of the western part of the Washington Territory, which was ceded by the British Empire in 1846</string>
    <string name="astana">Nur-Sultan  Kazakh: Nur-Sultan, known between 1998 and 2019 as Astana[a] (Kazakh: Astana, Russian: Астана), is the capital city of Kazakhstan. In March 2019, it was renamed Nur-Sultan in honour of the departing Kazakh president</string>
    <string name="baku">Baku is the capital and largest city of Azerbaijan, as well as the largest city on the Caspian Sea and of the Caucasus region. Baku is located 28 metres (92 ft) below sea level, which makes it the lowest lying national capital in the world and also the largest city in the world located below sea level. Baku lies on the southern shore of the Absheron Peninsula</string>
    <string name="bishkek">Bishkek, formerly Pishpek and Frunze, is the capital and largest city of Kyrgyzstan (Kyrgyz Republic). Bishkek is also the administrative centre of the Chuy Region. The province surrounds the city, although the city itself is not part of the province, but rather a province-level unit of Kyrgyzstan.</string>
    <string name="karakol">Karakol is the fourth largest city in Kyrgyzstan, near the eastern tip of Lake Issyk-Kul in Kyrgyzstan, about 150 kilometres (93 mi) from the Kyrgyzstan–China border and 380 kilometres (240 mi) from the capital Bishkek. It is the administrative capital of Issyk-Kul Region. Its area is 44 square kilometres (17 sq mi) and its resident population was 66,294 in 2009 (both including Pristan To the north, on highway A363, is Tyup and to the southwest Jeti-Ögüz resort.</string>
    <string name="berlin">Berlin is the capital and largest city of Germany by both area and population.[6][7] Its 3,769,495 (2019)[2] inhabitants make it the most populous city proper of the European Union.[8] The city is one of Germanys 16 federal states. It is surrounded by the state of Brandenburg, and contiguous with Potsdam, Brandenburs capital. The two cities are at the center of the Berlin-Brandenburg capital region, which is, with about six million inhabitants and an area of more than 30,000 km2,[9] Germanys third-largest metropolitan region after the Rhine-Ruhr and Rhine-Main regions.</string>
    <string name="athens">Athens, is the capital and largest city of Greece. Athens dominates the Attica region and is one of the worlds oldest cities, with its recorded history spanning over 3,400 years[citation needed] and its earliest human presence started somewhere between the 11th and 7th millennium BC. Classical Athens was a powerful city-state. </string>
    <string name="bandung">Bandung is the capital of West Java province in Indonesia. Based on the official mid-2020 estimate, it is Indonesias fourth most populous city after Jakarta, Surabaya, and Bekasi with 2,510,103 inhabitants.[4] Greater Bandung is the country's third-largest metropolitan area with over 8.5 million inhabitants.[5] Located 768 metres (2,520 feet) above sea level, approximately 140 kilometres (87 miles) southeast of Jakarta, Bandung has cooler year-round temperatures than most other Indonesian cities. The city lies on a river basin surrounded by volcanic mountains that provides a natural defence system, which was the primary reason for the Dutch East Indies governments plan to move the capital from Batavia (modern-day Jakarta) to Bandung.</string>


</resources>